2003-07-25  Larry Ewing  <lewing@ximian.com>

	* Makefile.am (noinst_PROGRAMS): bump version numbers.

2003-07-25  Radek Doulik  <rodo@ximian.com>

	* htmltextslave.c (hts_fit_line): don't set width for empty slaves
	(they need width == 1 to be able to be selected)
	(get_offset_for_pointer): fix len initialization, fix border
	conditions
	(get_offset_for_pointer): extracted calc_offset function, handle
	slave->posLen < 2 as special case
	(hts_fit_line): pass start_pointer to split, hinted by Larry

2003-07-24  Larry Ewing  <lewing@ximian.com>

	* htmlvspace.[ch]: remove these files that haven't been in the
	build for ages.
	
	* htmltypes.h: remove vspace reference.

	* htmltype.c (html_type_name): remove vspace reference.

	* htmlenums.h: remove vspace references.

	* htmlengine.c: redo anchor closing logic.  Change dir parsing.
	
	* htmlengine.c (parse_d): don't push another level for DT just
	keep the DL level.  We should however set the item flag but we can
	do that later.	

2003-07-23  Larry Ewing  <lewing@ximian.com>

	* htmlengine.c:  Rewrite the block stack and move most of the
	closing element logic into the end functions.  make all the
	various block elements have the same level.  Redo list parsing.
	This patch encompasses a lot of changes it probably breaks a few
	things.
	(push_block_element): merge the block stack and the span stack
	into one structure.
	(block_end_map): a new end function for maps.  This is tested and
	conforms to what mozilla does.
	(block_end_option): a nes end function for options, has not yet
	been tested.

	* htmltypes.h: remove the blockstack element typedef it shouldn't
	have been here in the first place.

	* htmlengine.h: remove the now unused blockstack.

2003-07-23  Radek Doulik  <rodo@ximian.com>

	* htmlengine.c (html_engine_set_painter): fix printing, don't
	reset pango info on painter switching

2003-07-20  Larry Ewing  <lewing@ximian.com>

	* htmlengine.c (pop_element): move everything to using the pop